# jrc_common

./: README.md  pyproject.toml
src/jrc_common/: jrc_common.py  requirements.txt
