[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "jrc_common"
version = "1.1.3"
authors = [
  { name="Rob Svirskas", email="svirskasr@hhmi.org" },
]
description = "Library of common utility functions for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["colorlog",
                "mysqlclient==2.1.1",
                "psycopg2-binary",
                "PyJWT==2.6.0",
                "pymongo==4.4.0",
                "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JaneliaSciComp/jrc_common"
