[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "jrc_common"
version = "3.5.0"
authors = [
  { name="Rob Svirskas", email="svirskasr@hhmi.org" },
]
description = "Library of common utility functions for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["colorlog",
                "PyJWT==2.6.0",
                "requests",
                "xmltodict"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JaneliaSciComp/jrc_common"
